Fix invisible email link

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4023,3 +4023,7 @@ i::before {
 	border-radius: 50%;
 	margin-bottom: 24px;
 }
+
+#contactEmail {
+	color: white;
+}
